# simple_P2P

./: .gitignore  CMakeLists.txt  Dockerfile  FileManager.h  FileRequest.cpp  README.md  RequestServer.cpp  RequestServer.h  create_configs.sh  docker-compose.yaml  testing_guide.md
doc/: DOC - Appendix.txt  README.md  README.txt
doc/Polish/: TIN-Dokumentacja.tex  annotated.tex  classSimpleP2P_1_1FileManager.tex  classSimpleP2P_1_1FileRequest.tex  classSimpleP2P_1_1RequestServer.tex  classSimpleP2P_1_1RequestServerModule.tex  classSimpleP2P_1_1RequestWorker.tex  classsimpleP2P_1_1CLI.tex  classsimpleP2P_1_1CLICommand.tex  classsimpleP2P_1_1CLIResourceService.tex  classsimpleP2P_1_1CompleteResource.tex  classsimpleP2P_1_1DownloadService.tex  classsimpleP2P_1_1DownloadWorker.tex  classsimpleP2P_1_1FileManager.tex  classsimpleP2P_1_1FileRequest.tex  classsimpleP2P_1_1Host.tex  classsimpleP2P_1_1Logging__Module.tex  classsimpleP2P_1_1Printer.tex  classsimpleP2P_1_1RequestServer.tex  md_README.tex  (+9 more)
include/: CLI.h  CLICommand.h  CLIResourceService.h  CompleteResource.h  DownloadService.h  DownloadWorker.h  FileManager.h  FileRequest.h  GeneralTypes.h  Host.h  LoggingModule.h  Peer.h  RequestServer.h  RequestServerModule.h  RequestWorker.h  Resource.h  ResourceDatabase.h  ResourceHeader.h  Segment.h  SegmentRequest.h  UdpClient.h  UdpModule.h  UdpServer.h  host.h  logging_module.h  printer.h  resource.h  resource_database.h  udp_beacon.h  udp_client.cpp  udp_client.h  udp_listener.h  udp_module.cpp  udp_module.h  udp_server.h
src/: CLI.cpp  CLICommand.cpp  CLIResourceService.cpp  CMakeLists.txt  CompleteResource.cpp  DownloadService.cpp  DownloadWorker.cpp  FileManager.cpp  FileRequest.cpp  Host.cpp  LoggingModule.cpp  RequestServer.cpp  RequestServerModule.cpp  RequestWorker.cpp  Resource.cpp  ResourceDatabase.cpp  Segment.cpp  SegmentRequest.cpp  UdpClient.cpp  UdpModule.cpp  UdpServer.cpp  host.cpp  logging_module.cpp  main.cpp  printer.cpp  resource.cpp  resource_database.cpp  udp_beacon.cpp  udp_client.cpp  udp_listener.cpp  udp_module.cpp  udp_server.cpp
tests/: Dockerfile  docker-compose.yaml
